[gd_scene load_steps=2 format=3 uid="uid://iimtqc55tleo"]

[ext_resource type="Script" path="res://SelectGameScene/select_game.gd" id="1_1ygv5"]

[node name="select_game" type="Node2D"]
script = ExtResource("1_1ygv5")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 33.0
offset_top = 25.0
offset_right = 287.0
offset_bottom = 80.0
theme_override_font_sizes/normal_font_size = 40
text = "Select Game"
fit_content = true

[node name="ButtonQuit" type="Button" parent="."]
offset_left = 1161.0
offset_top = 21.0
offset_right = 1252.0
offset_bottom = 84.0
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 41.0
offset_top = 92.0
offset_right = 1237.0
offset_bottom = 692.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="1_JumpFox" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "1 - Jump Fox"

[node name="3_OneEyeFish" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "3 - OneEye Fish"

[node name="4_OneEyeFish3D" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "4 - OneEye Fish 3D"

[connection signal="pressed" from="ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="gui_input" from="ScrollContainer" to="." method="_on_scroll_container_gui_input"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/1_JumpFox" to="." method="_on_button_1JumpFox_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/3_OneEyeFish" to="." method="_on__one_eye_fish_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/4_OneEyeFish3D" to="." method="_on__one_eye_fish_3d_pressed"]
